# opsgenie-desktop

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/opsgenie/: alert.rs  mod.rs
